--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -122,12 +122,15 @@
             <img src="./vu-linh/anh/BKV00167.webp" alt="" class="pic3"  data-aos="flip-right">
             <div class="box-form">
                 <img src="./vu-linh/anh/BKV009202.webp" alt="" class="img-form" data-aos="flip-up">
-                <label for="" class="lb-form">BẠN SẼ THAM DỰ CHỨ?</label>
-                <form action="" name="vu-linh" data-aos="zoom-in">
+                <div class="box-thamdu">
+                    <label for="" class="lb-form">BẠN SẼ THAM DỰ CHỨ?</label>
                     <div class="feed-info">
                         <label for="" class="in-fe">Hãy dành chút thời gian xác nhận tham dự giúp <br>
                             Minh Khang & minh Anh nhé!</label>
                     </div>
+                </div>
+                <form action="" name="vu-linh" data-aos="zoom-in">
+                    
         
                     <div class="container-check">
                         <input class="box-feed" type="radio" value="CÓ" id="yes" name="XÁC NHẬN">
