--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="box-pp" data-aos="fade-left">
                     <label for="" class="pp1">HOÀNG THỊ KHÁNH LINH</label>
-                    <label for="" class="pp2">QUÝ NỮ</label>
+                    <label for="" class="pp2">TRƯỞNG NỮ</label>
                 </div>
             </div>
             <div class="center">
@@ -126,7 +126,7 @@
                     <label for="" class="lb-form">BẠN SẼ THAM DỰ CHỨ?</label>
                     <div class="feed-info">
                         <label for="" class="in-fe">Hãy dành chút thời gian xác nhận tham dự giúp <br>
-                            Minh Khang & minh Anh nhé!</label>
+                            Hoàng Vũ & Khánh Linh nhé!</label>
                     </div>
                 </div>
                 <form action="" name="vu-linh" data-aos="zoom-in">
